--- a/public/stylesheets/MainMemuStyle.css
+++ b/public/stylesheets/MainMemuStyle.css
@@ -1,3 +1,230 @@
 p {
     text-align: center;
 }
+
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+
+body{
+  margin:0;
+  padding:0;
+  -webkit-box-sizing:border-box;
+  box-sizing:border-box;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  position: relative;
+  background:#e91e63;
+  transform: translateX(0px);
+  transition: transform 800ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+html {
+  overflow-x: hidden;
+}
+
+iframe{
+    position: absolute;
+    top:0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100vw;
+}
+/*----------------- button ---------*/
+.button {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  z-index: 10000;
+  background:transparent;
+  width:50px;
+  height:40px;
+  overflow:hidden;
+  cursor:pointer;
+}
+
+.button:hover{
+  cursor:pointer;
+}
+
+.button > .line{
+  display:block;
+  width:80%;
+  height:2px;
+  background:#fff;
+  margin:8px auto;
+}
+
+.button .line:nth-child(1), .button .line:nth-child(3){
+  -webkit-transform:rotate(0deg) translateY(0);
+  -moz-transform:rotate(0deg) translateY(0);
+  ttransform:rotate(0deg) translateY(0);
+    -webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition:         all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55); 
+}
+
+.button .line:nth-child(2){
+  -webkit-transform:translateX(0);
+  -moz-transform:translateX(0);
+  transform:translateX(0);
+   -webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition:         all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55); 
+}
+
+
+/*-------------- the close button ---------*/
+
+.close .line:nth-child(1) {
+  -webkit-transform:rotate(45deg) translateY(15px);
+  -moz-transform:rotate(45deg) translateY(15px);
+  transform:rotate(45deg) translateY(15px);
+  
+}
+
+.close .line:nth-child(3) {
+  -webkit-transform:rotate(-45deg) translateY(-15px);
+  -moz-transform:rotate(-45deg) translateY(-15px);
+  transform:rotate(-45deg) translateY(-15px);
+}
+
+.close .line:nth-child(2){
+  -webkit-transform:translateX(-100px);
+  -moz-transform:translateX(-100px);
+  transform:translateX(-100px);
+}
+
+
+/*---------------- menu -----------*/
+.menu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 400px;
+  height: 100vh;
+  overflow:hidden;
+  padding-left: 0;
+  -webkit-transform: translateX(-150%);
+  transform: translateX(-150%);
+transition: transform 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition-delay: .1s;
+}
+
+.menu nav ul {
+  margin: 0;
+  padding: 20px 0;
+  list-style: none;
+}
+
+.menu nav ul li {
+  margin: 0;
+  padding: 0;
+}
+
+.menu nav ul li a{
+  color:#fff;
+  text-decoration:none;
+  display: block;
+  padding: 10px 20px;
+  padding-left: 120px;
+  -webkit-transform:translateX(0px);
+  transform:translateX(0px);
+    -webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition:         all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.menu nav ul li a:hover{
+  background: rgba(1,1,1,.3);
+  -webkit-transform:translateX(20px);
+  transform:translateX(20px);
+}
+
+/*-- class of show and hide the menu --*/
+body.nav_is_visible {
+  transform: translateX(300px);
+}
+
+body.nav_is_visible .menu {
+  transform: translateX(-100%);
+}
+
+
+/*----------------- content ---------------*/
+.content {
+  position: absolute;
+  margin: 0 auto;
+  padding: 30px 20%;
+  font-size: 18px;
+  width: 100%;
+  transform: translateX(100%);
+  transition: color 1s ease 1s, background 0.5s ease 1s, transform 1000ms cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.3s;
+}
+
+.content  h1 {
+  font-size: 60px;
+ 
+}
+
+.content  p {
+  margin-bottom: 100px;
+  line-height: 2.4;
+  text-align: left;
+  width: 60%;
+  position: relative;
+}
+
+.content .wrapper{
+    position: relative;
+    min-height: 100vmin;
+   -webkit-transform:translateX(300%);
+  transform:translateX(300%);
+      -webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.info_is_visible .info .wrapper,
+.about_is_visible .about .wrapper,
+.scene_is_visible .scene .wrapper,
+.mode_is_visible .mode .wrapper,
+.records_is_visible .records .wrapper{
+  -webkit-transform:translateX(0);
+  transform:translateX(0);
+}
+
+
+/*--------------- effect ---------------*/
+.info_is_visible .info, 
+.about_is_visible .about, .scene_is_visible .scene, .mode_is_visible .mode, .records_is_visible .records {
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+  z-index:5000;
+}
+
+
+.info_is_visible .info {
+  color: white;
+  background: #ff9800;
+}
+
+
+.about_is_visible .about {
+  color: white;
+  background: #9c27b0;
+}
+
+
+.scene_is_visible .scene {
+  color: white;
+  background: #ff5722;
+}
+
+.records_is_visible .records {
+  color: white;
+  background: #3f51b5;
+}
+
+.mode_is_visible .mode {
+    color: white;
+    background: #3f51b5;
+  }
+
