--- a/public/stylesheets/MainMemuStyle.css
+++ b/public/stylesheets/MainMemuStyle.css
@@ -4,6 +4,146 @@ p {
 
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 
+@supports (-webkit-appearance: none) or (-moz-appearance: none) {
+  input[type='checkbox'],
+  input[type='radio'] {
+      --active: #275EFE;
+      --active-inner: #fff;
+      --focus: 2px rgba(39, 94, 254, .3);
+      --border: #BBC1E1;
+      --border-hover: #275EFE;
+      --background: #fff;
+      --disabled: #F6F8FF;
+      --disabled-inner: #E1E6F9;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      height: 21px;
+      outline: none;
+      display: inline-block;
+      vertical-align: top;
+      position: relative;
+      margin-left: 20%;
+      cursor: pointer;
+      border: 1px solid var(--bc, var(--border));
+      background: var(--b, var(--background));
+      float: left;
+      transition: background .3s, border-color .3s, box-shadow .2s;
+  }
+  input[type='checkbox']:after,
+  input[type='radio']:after {
+      content: '';
+      display: block;
+      left: 0;
+      top: 0;
+      position: absolute;
+      transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
+  }
+  input[type='checkbox']:checked,
+  input[type='radio']:checked {
+      --b: var(--active);
+      --bc: var(--active);
+      --d-o: .3s;
+      --d-t: .6s;
+      --d-t-e: cubic-bezier(.2, .85, .32, 1.2);
+  }
+  input[type='checkbox']:disabled,
+  input[type='radio']:disabled {
+      --b: var(--disabled);
+      cursor: not-allowed;
+      opacity: .9;
+  }
+  input[type='checkbox']:disabled:checked,
+  input[type='radio']:disabled:checked {
+      --b: var(--disabled-inner);
+      --bc: var(--border);
+  }
+  input[type='checkbox']:disabled + label,
+  input[type='radio']:disabled + label {
+      cursor: not-allowed;
+  }
+  input[type='checkbox']:hover:not(:checked):not(:disabled),
+  input[type='radio']:hover:not(:checked):not(:disabled) {
+      --bc: var(--border-hover);
+  }
+  input[type='checkbox']:focus,
+  input[type='radio']:focus {
+      box-shadow: 0 0 0 var(--focus);
+  }
+  input[type='checkbox']:not(.switch),
+  input[type='radio']:not(.switch) {
+      width: 21px;
+  }
+  input[type='checkbox']:not(.switch):after,
+  input[type='radio']:not(.switch):after {
+      opacity: var(--o, 0);
+  }
+  input[type='checkbox']:not(.switch):checked,
+  input[type='radio']:not(.switch):checked {
+      --o: 1;
+  }
+  input[type='checkbox'] + label,
+  input[type='radio'] + label {
+      font-size: 14px;
+      line-height: 21px;
+      display: inline-block;
+      vertical-align: top;
+      cursor: pointer;
+      margin-left: 4px;
+  }
+  input[type='checkbox']:not(.switch) {
+      border-radius: 7px;
+  }
+  input[type='checkbox']:not(.switch):after {
+      width: 5px;
+      height: 9px;
+      border: 2px solid var(--active-inner);
+      border-top: 0;
+      border-left: 0;
+      left: 7px;
+      top: 4px;
+      transform: rotate(var(--r, 20deg));
+  }
+  input[type='checkbox']:not(.switch):checked {
+      --r: 43deg;
+  }
+  input[type='checkbox'].switch {
+      width: 38px;
+      border-radius: 11px;
+  }
+  input[type='checkbox'].switch:after {
+      left: 2px;
+      top: 2px;
+      border-radius: 50%;
+      width: 15px;
+      height: 15px;
+      background: var(--ab, var(--border));
+      transform: translateX(var(--x, 0));
+  }
+  input[type='checkbox'].switch:checked {
+      --ab: var(--active-inner);
+      --x: 17px;
+  }
+  input[type='checkbox'].switch:disabled:not(:checked):after {
+      opacity: .6;
+  }
+  input[type='radio'] {
+      border-radius: 50%;
+  }
+  input[type='radio']:after {
+      width: 19px;
+      height: 19px;
+      border-radius: 50%;
+      background: var(--active-inner);
+      opacity: 0;
+      transform: scale(var(--s, 0.7));
+  }
+  input[type='radio']:checked {
+      --s: .5;
+  }
+}
+
+
+
 body{
   margin:0;
   padding:0;
@@ -12,7 +152,7 @@ body{
   color: #fff;
   font-family: 'Roboto', sans-serif;
   position: relative;
-  background:#e91e63;
+  background:black;
   transform: translateX(0px);
   transition: transform 800ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
@@ -22,6 +162,7 @@ html {
 }
 
 iframe{
+    z-index: -1;
     position: absolute;
     top:0;
     left: 0;
@@ -30,201 +171,79 @@ iframe{
     height: 100vh;
     width: 100vw;
 }
-/*----------------- button ---------*/
-.button {
-  position: fixed;
-  top: 10px;
-  left: 10px;
-  z-index: 10000;
-  background:transparent;
-  width:50px;
-  height:40px;
-  overflow:hidden;
-  cursor:pointer;
+
+.menu_grid {
+  display: grid; 
+  grid-template-areas: "a a"
+                       "b c"
+                       "d e";
+grid-template-rows: 1fr 1fr 1fr; 
+grid-template-columns: 3fr 2fr;
 }
 
-.button:hover{
-  cursor:pointer;
+.regimes_grid {
+  justify-self:center;
+  display: grid; 
+  grid-template-areas: "a a a"
+                       "b c d"
+                       "e f f";
+grid-template-rows: 0.5fr 1fr 0.5fr;
+grid-template-columns: repeat(3, 1fr);
+grid-column-gap: 5px;
+grid-row-gap: 10px;
 }
 
-.button > .line{
-  display:block;
-  width:80%;
-  height:2px;
-  background:#fff;
-  margin:8px auto;
+#modes{
+  grid-area: f;
+}
+#start_button{
+  border: 0;
+  font-size: 28px;
+  border-radius: 10px;
+  transition: background 0.3s ease-in 0.1s;
+}
+#start_button:hover{
+  cursor: pointer;
+  background: #275EFE;
+}
+.modes_grid{
+  display: grid; 
+  grid-template-areas: "a b";
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+
 }
 
-.button .line:nth-child(1), .button .line:nth-child(3){
-  -webkit-transform:rotate(0deg) translateY(0);
-  -moz-transform:rotate(0deg) translateY(0);
-  ttransform:rotate(0deg) translateY(0);
-    -webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  transition:         all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55); 
+.sub_titles{
+  font-size: 24px;
 }
 
-.button .line:nth-child(2){
-  -webkit-transform:translateX(0);
-  -moz-transform:translateX(0);
-  transform:translateX(0);
-   -webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  transition:         all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55); 
+form{
+  height: 100%;
+  font-size: 20px;
+  text-align: center;
 }
 
-
-/*-------------- the close button ---------*/
-
-.close .line:nth-child(1) {
-  -webkit-transform:rotate(45deg) translateY(15px);
-  -moz-transform:rotate(45deg) translateY(15px);
-  transform:rotate(45deg) translateY(15px);
-  
+#regimes > p{
+  font-size: 35px;
+  grid-area: a;
 }
 
-.close .line:nth-child(3) {
-  -webkit-transform:rotate(-45deg) translateY(-15px);
-  -moz-transform:rotate(-45deg) translateY(-15px);
-  transform:rotate(-45deg) translateY(-15px);
+.regimes_def_position{            
+  grid-area: b;
+}
+#regimes{
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  background: #47474770;
+  border-radius: 10px;
+  box-shadow: 1px 0px 46px white;
+  width: 95%;
+  height: 100%;
 }
 
-.close .line:nth-child(2){
-  -webkit-transform:translateX(-100px);
-  -moz-transform:translateX(-100px);
-  transform:translateX(-100px);
-}
-
-
-/*---------------- menu -----------*/
-.menu {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 400px;
+#menu{
   height: 100vh;
-  overflow:hidden;
-  padding-left: 0;
-  -webkit-transform: translateX(-150%);
-  transform: translateX(-150%);
-transition: transform 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  transition-delay: .1s;
+  width: 100vw;
 }
-
-.menu nav ul {
-  margin: 0;
-  padding: 20px 0;
-  list-style: none;
-}
-
-.menu nav ul li {
-  margin: 0;
-  padding: 0;
-}
-
-.menu nav ul li a{
-  color:#fff;
-  text-decoration:none;
-  display: block;
-  padding: 10px 20px;
-  padding-left: 120px;
-  -webkit-transform:translateX(0px);
-  transform:translateX(0px);
-    -webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  transition:         all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-
-.menu nav ul li a:hover{
-  background: rgba(1,1,1,.3);
-  -webkit-transform:translateX(20px);
-  transform:translateX(20px);
-}
-
-/*-- class of show and hide the menu --*/
-body.nav_is_visible {
-  transform: translateX(300px);
-}
-
-body.nav_is_visible .menu {
-  transform: translateX(-100%);
-}
-
-
-/*----------------- content ---------------*/
-.content {
-  position: absolute;
-  margin: 0 auto;
-  padding: 30px 20%;
-  font-size: 18px;
-  width: 100%;
-  transform: translateX(100%);
-  transition: color 1s ease 1s, background 0.5s ease 1s, transform 1000ms cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.3s;
-}
-
-.content  h1 {
-  font-size: 60px;
- 
-}
-
-.content  p {
-  margin-bottom: 100px;
-  line-height: 2.4;
-  text-align: left;
-  width: 60%;
-  position: relative;
-}
-
-.content .wrapper{
-    position: relative;
-    min-height: 100vmin;
-   -webkit-transform:translateX(300%);
-  transform:translateX(300%);
-      -webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-
-.info_is_visible .info .wrapper,
-.about_is_visible .about .wrapper,
-.scene_is_visible .scene .wrapper,
-.mode_is_visible .mode .wrapper,
-.records_is_visible .records .wrapper{
-  -webkit-transform:translateX(0);
-  transform:translateX(0);
-}
-
-
-/*--------------- effect ---------------*/
-.info_is_visible .info, 
-.about_is_visible .about, .scene_is_visible .scene, .mode_is_visible .mode, .records_is_visible .records {
-  -webkit-transform: translateX(0);
-  transform: translateX(0);
-  z-index:5000;
-}
-
-
-.info_is_visible .info {
-  color: white;
-  background: #ff9800;
-}
-
-
-.about_is_visible .about {
-  color: white;
-  background: #9c27b0;
-}
-
-
-.scene_is_visible .scene {
-  color: white;
-  background: #ff5722;
-}
-
-.records_is_visible .records {
-  color: white;
-  background: #3f51b5;
-}
-
-.mode_is_visible .mode {
-    color: white;
-    background: #3f51b5;
-  }
 
