--- a/public/stylesheets/MainMemuStyle.css
+++ b/public/stylesheets/MainMemuStyle.css
@@ -1,6 +1,6 @@
-p {
-    text-align: center;
-}
+/********************************
+      CUSTOMIZATION INTUTS
+********************************/
 
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 
@@ -22,11 +22,9 @@ p {
       display: inline-block;
       vertical-align: top;
       position: relative;
-      margin-left: 20%;
       cursor: pointer;
       border: 1px solid var(--bc, var(--border));
       background: var(--b, var(--background));
-      float: left;
       transition: background .3s, border-color .3s, box-shadow .2s;
   }
   input[type='checkbox']:after,
@@ -143,6 +141,9 @@ p {
 }
 
 
+/**********************
+         NODES 
+**********************/
 
 body{
   margin:0;
@@ -172,78 +173,123 @@ iframe{
     width: 100vw;
 }
 
-.menu_grid {
-  display: grid; 
-  grid-template-areas: "a a"
-                       "b c"
-                       "d e";
-grid-template-rows: 1fr 1fr 1fr; 
-grid-template-columns: 3fr 2fr;
-}
-
-.regimes_grid {
-  justify-self:center;
-  display: grid; 
-  grid-template-areas: "a a a"
-                       "b c d"
-                       "e f f";
-grid-template-rows: 0.5fr 1fr 0.5fr;
-grid-template-columns: repeat(3, 1fr);
-grid-column-gap: 5px;
-grid-row-gap: 10px;
-}
-
-#modes{
-  grid-area: f;
-}
-#start_button{
-  border: 0;
-  font-size: 28px;
-  border-radius: 10px;
-  transition: background 0.3s ease-in 0.1s;
-}
-#start_button:hover{
-  cursor: pointer;
-  background: #275EFE;
-}
-.modes_grid{
-  display: grid; 
-  grid-template-areas: "a b";
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr;
-
-}
-
-.sub_titles{
-  font-size: 24px;
-}
 
 form{
   height: 100%;
-  font-size: 20px;
   text-align: center;
 }
 
-#regimes > p{
-  font-size: 35px;
-  grid-area: a;
-}
 
-.regimes_def_position{            
-  grid-area: b;
-}
+/**********************
+      IDENTIFICATORS 
+**********************/
+
 #regimes{
   font-family: 'Roboto', sans-serif;
   text-align: center;
-  background: #47474770;
-  border-radius: 10px;
-  box-shadow: 1px 0px 46px white;
-  width: 95%;
-  height: 100%;
 }
 
 #menu{
-  height: 100vh;
-  width: 100vw;
+
+}
+
+#modes{
+  grid-area: a;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+}
+#start_button{
+  border: 0;
+  font-size: 34px;
+  border-radius: 1px;
+  display: grid;
+  margin: 15px 10px 15px 0;
+  padding: 5px 15px;
+  transition: background 0.3s ease-in 0.1s;
+}
+#start_button:hover{
+  border: 0;
+  cursor: pointer;
+  background: #275EFE;
+}
+#start_button:focus{
+
+}
+
+#start{
+  display: grid;
+  grid-area: i;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  margin-top: 10px;
+}
+
+/**********************
+     ELEMENTS SETUP 
+**********************/
+#start_position p, #end_position p, #control p{
+  text-align: left;
+}
+
+#modes p 
+{
+  font-size: 28px;
+}
+
+.left{
+  justify-self: start;
+  align-self: center;
+}
+.right{
+  justify-self: end;
+  align-self: center;
+}
+.center{
+  justify-self: center;
+  align-self: center;
+}
+/**********************
+         GRIDS 
+**********************/
+
+.menu_grid {
+  display: grid; 
+  grid-template-areas: "a a a"
+                       "k b c"
+                       "g d e";
+  grid-template-columns: 0.3fr 2fr 3fr;
+  grid-template-rows: 1fr 4fr 1fr;
+}
+
+.regimes_grid {
+  grid-template-areas: "a a"
+                       "b c"
+                       "d e"
+                       "f g"
+                       "i i";
+  display: grid; 
+  grid-template-rows: repeat(5fr, 5);
+  grid-template-columns: 1fr 1fr;
+  gap: 0 10px;
+}
+
+.mode_form_grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.start_position_form_grid , .end_position_form_grid{
+  display: grid;
+  grid-template-rows: 42px 42px 42px;
+}
+.control_form_grid{
+  display: grid;
+  grid-template-rows: 42px 42px;
+}
+.form_item{
+  display: grid;
+  grid-template-columns: 1fr 1fr; 
+}
+.regimes_def_position{            
+  grid-area: b;
 }
 
