--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -7,3 +7,60 @@ body{
     color: white;
     overflow: hidden;
 }
+
+#cameraMenu {
+    position: absolute;
+    top:-40px;
+    right: 20px;
+    background-color: rgb(59, 55, 55);
+    transition: top 0.5s cubic-bezier(0.18, 0.89, 0.28, 1.57);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+#pointer
+{
+    position: relative;
+    top: 40px;
+}
+
+#pointer::after
+{
+    content: 'camera'; 
+    position: absolute; /* Абсолютное позиционирование */
+    border: 19px solid transparent; /* Прозрачные границы */
+    border-top: 10px solid rgb(59, 55, 55); /* Добавляем треугольник */
+}
+
+#cameraMenu:hover
+{
+    position: absolute;
+    top:0px;
+    right: 20px;
+    /* width: 200px; */
+    height: 40px;
+    /* background-color:  rgb(20, 19, 19); */
+}
+
+#cameraMenu .menuItem {
+    border: none;
+    outline: none;
+    color: red;
+    background-color: transparent;
+    display: inline-block;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    transition: background-color 0.5s;
+}
+
+#cameraMenu .menuItem:hover
+{
+    background-color:  rgb(20, 19, 19);
+}
+
+#cameraMenu .menuItem:disabled
+{
+    background-color:  rgb(20, 19, 19);
+    color: rgb(59, 55, 55);
+}
