--- a/public/stylesheets/MainMemuStyle.css
+++ b/public/stylesheets/MainMemuStyle.css
@@ -7,11 +7,11 @@
 @supports (-webkit-appearance: none) or (-moz-appearance: none) {
   input[type='checkbox'],
   input[type='radio'] {
-      --active: #275EFE;
+      --active: rgb(223, 27, 44);
       --active-inner: #fff;
       --focus: 2px rgba(39, 94, 254, .3);
       --border: #BBC1E1;
-      --border-hover: #275EFE;
+      --border-hover: rgb(223, 27, 44);
       --background: #fff;
       --disabled: #F6F8FF;
       --disabled-inner: #E1E6F9;
@@ -171,6 +171,7 @@ iframe{
     padding: 0;
     height: 100vh;
     width: 100vw;
+    /* filter: blur(0px); */
 }
 
 
@@ -187,6 +188,7 @@ form{
 #regimes{
   font-family: 'Roboto', sans-serif;
   text-align: center;
+  transform: rotate3d(-1, 1, 0, 90deg);
 }
 
 #menu{
@@ -210,7 +212,7 @@ form{
 #start_button:hover{
   border: 0;
   cursor: pointer;
-  background: #275EFE;
+  background: rgb(223, 27, 44);
 }
 #start_button:focus{
 
@@ -225,8 +227,30 @@ form{
 }
 
 /**********************
+      KEYFRAMES 
+**********************/
+@keyframes fadeInMenu {
+  from {transform: rotate3d(-1, 1, 0, 90deg);}
+  to {transform: rotate3d(-1, 1, 0, 0deg);}
+}
+@keyframes fadeOutMenu {
+  from {transform: rotate3d(-1, 1, 0, 0deg);}
+  to {transform: rotate3d(-1, 1, 0, 90deg);}
+}
+
+@keyframes blurBackground {
+  from {filter: blur(0px);}
+  to {filter: blur(5px);}
+}
+@keyframes unBlurBackground {
+  from {filter: blur(5px);}
+  to {filter: blur(0px);}
+}
+
+/**********************
      ELEMENTS SETUP 
 **********************/
+
 #start_position p, #end_position p, #control p{
   text-align: left;
 }
@@ -293,3 +317,126 @@ form{
   grid-area: b;
 }
 
+/* CUDE LOADER */
+
+#cube-loader {
+  align-items: center;
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  background: black;
+  transition: opacity 1s ease-in-out;
+}
+#cube-loader .caption {
+  margin: 0 auto;
+}
+#cube-loader .cube-loader {
+  width: 73px;
+  height: 73px;
+  margin: 0 auto;
+  margin-top: 49px;
+  position: relative;
+  transform: rotateZ(45deg);
+}
+#cube-loader .cube-loader .cube {
+  position: relative;
+  transform: rotateZ(45deg);
+  width: 50%;
+  height: 50%;
+  float: left;
+  transform: scale(1.1);
+}
+#cube-loader .cube-loader .cube:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  animation: cube-loader 2.76s infinite linear both;
+  transform-origin: 100% 100%;
+}
+#cube-loader .cube-loader .loader-2 {
+  transform: scale(1.1) rotateZ(90deg);
+}
+#cube-loader .cube-loader .loader-3 {
+  transform: scale(1.1) rotateZ(180deg);
+}
+#cube-loader .cube-loader .loader-4 {
+  transform: scale(1.1) rotateZ(270deg);
+}
+#cube-loader .cube-loader .loader-2:before {
+  animation-delay: 0.35s;
+}
+#cube-loader .cube-loader .loader-3:before {
+  animation-delay: 0.69s;
+}
+#cube-loader .cube-loader .loader-4:before {
+  animation-delay: 1.04s;
+}
+@keyframes cube-loader {
+  0%, 10% {
+    transform: perspective(136px) rotateX(-180deg);
+    opacity: 0;
+  }
+  25%, 75% {
+    transform: perspective(136px) rotateX(0deg);
+    opacity: 1;
+  }
+  90%, 100% {
+    transform: perspective(136px) rotateY(180deg);
+    opacity: 0;
+  }
+}
+/* BURGER */
+
+#hamburger{
+  z-index: 1;
+  position: absolute;
+  top:10px;
+  left: 10px;
+}
+
+.ham {
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  transition: transform 400ms;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.hamRotate.active {
+  transform: rotate(45deg);
+}
+.hamRotate180.active {
+  transform: rotate(180deg);
+}
+.line {
+  fill:none;
+  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+  stroke:#fff;
+  stroke-width:5.5;
+  stroke-linecap:round;
+}
+
+.ham6 .top {
+  stroke-dasharray: 40 172;
+}
+.ham6 .middle {
+  stroke-dasharray: 40 111;
+}
+.ham6 .bottom {
+  stroke-dasharray: 40 172;
+}
+.ham6.active .top {
+  stroke-dashoffset: -132px;
+}
+.ham6.active .middle {
+  stroke-dashoffset: -71px;
+}
+.ham6.active .bottom {
+  stroke-dashoffset: -132px;
+}
