--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -64,3 +64,17 @@ body{
     background-color:  rgb(20, 19, 19);
     color: rgb(59, 55, 55);
 }
+
+#timer_container{
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    width: 80px;
+    position: absolute;
+    font-family: "Courier New";
+    background: rgba(10, 10, 10, 0.9);
+    border-radius: 10px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: rgba(255, 255, 255, 0.5) 0px 2px 20px 2px;
+}
