--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -78,3 +78,9 @@ body{
     font-size: 30px;
     box-shadow: rgba(255, 255, 255, 0.5) 0px 2px 20px 2px;
 }
+h3 {
+text-align: center;
+}
+h5 {
+text-align: left;
+}
