--- a/public/stylesheets/MainMemuStyle.css
+++ b/public/stylesheets/MainMemuStyle.css
@@ -150,7 +150,7 @@ body{
   padding:0;
   -webkit-box-sizing:border-box;
   box-sizing:border-box;
-  color: #fff;
+  color: black;
   font-family: 'Roboto', sans-serif;
   position: relative;
   background:black;
@@ -198,8 +198,8 @@ form{
 
 #modes{
   grid-area: a;
-  border-top: 1px solid white;
-  border-bottom: 1px solid white;
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
 }
 #start_button{
   border: 0;
@@ -222,8 +222,8 @@ form{
 #start{
   display: grid;
   grid-area: i;
-  border-top: 1px solid white;
-  border-bottom: 1px solid white;
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
   margin-top: 10px;
 }
 
@@ -265,11 +265,12 @@ font-family: Georgia, 'Times New Roman', Times, serif;
 
 #start_position p, #end_position p, #control p{
   text-align: left;
+  font-size: 20px;
 }
 
 #modes p 
 {
-  font-size: 28px;
+  font-size: 38px;
 }
 
 .left{
@@ -321,6 +322,7 @@ font-family: Georgia, 'Times New Roman', Times, serif;
   grid-template-rows: 42px 42px;
 }
 .form_item{
+  font-size: 20px;
   display: grid;
   grid-template-columns: 1fr 2fr; 
 }
@@ -408,6 +410,7 @@ font-family: Georgia, 'Times New Roman', Times, serif;
   position: absolute;
   top:10px;
   left: 10px;
+  color:black;
 }
 
 .ham {
@@ -428,7 +431,7 @@ font-family: Georgia, 'Times New Roman', Times, serif;
 .line {
   fill:none;
   transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
-  stroke:#fff;
+  stroke:black;
   stroke-width:5.5;
   stroke-linecap:round;
 }
