--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -1,7 +1,8 @@
 *{
     margin: 0;
-    padding: 
+    padding: 0
 }
+
 body{
     background: black;
     color: white;
@@ -24,6 +25,7 @@ body{
 {
     position: relative;
     top: 83px;
+    color: black;
 }
 
 #pointer::after
